--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Blogs</title>
+
+    <link rel="apple-touch-icon" type="image/png"
+        href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
 
     <meta name="apple-mobile-web-app-title" content="CodePen">
+
+    <link rel="icon" type="image/x-icon"
+        href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+
+    <link rel="mask-icon" type="image/x-icon"
+        href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg"
+        color="#111">
+
 
 
 
     <script
         src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
+
+
+    <title>CSS Animated Header</title>
 
     <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap"
@@ -23,14 +38,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="blog.css">
+
+    <script>
+        window.console = window.console || function (t) { };
+    </script>
+
 </head>
 
-<body>
+<body translate="no">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="logo navbar-brand" href="about.html">About</a>
+            <a class="logo navbar-brand" href="index.html">Blobs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <svg class="svg-inline--fa fa-bars" aria-hidden="true" focusable="false" data-prefix="fas"
@@ -51,45 +71,34 @@
         </div>
     </nav>
 
+    
     <div class="header">
+        <!-- <div class="sides">
+            <a href="#" class="logo">BLOG</a>
+        </div> -->
+        <!-- <div class="sides"> <a href="#" class="menu" id="openMenu"> </a></div> -->
         <div class="info">
-            <h1 class="title-home">About</h1>
+            <!-- <h4>Readings in Philippine History</h4> -->
+            <h1 class="title-home">Blogs</h1>
+            <!-- <div class="meta">
+                By <a href="" target="_b">Eury Marc Suhi-an, Carl Johannes Munoz, Rey Kristian Aure,
+                    Sean Margarata.</a>
+            </div> -->
         </div>
     </div>
-
-    <main class="mb-4">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <h1>
-                        What's this shit for?
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur
-                        voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam
-                        ducimus consectetur?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque
-                        architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae
-                        voluptatum in officia voluptas voluptatibus, minus!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi
-                        aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste
-                        neque sit tempora!</p>
-
-                    <h1>
-                        Who's this shit for?
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur
-                        voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam
-                        ducimus consectetur?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque
-                        architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae
-                        voluptatum in officia voluptas voluptatibus, minus!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi
-                        aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste
-                        neque sit tempora!</p>
-                </div>
-            </div>
-        </div>
-    </main>
+    <section class="content">
+        <p>Embark on a digital odyssey through awe-inspiring landscapes and echoes of ancient lore—a realm where
+            nature’s raw majesty and
+            the legacy of civilizations entwine. Traverse a land shaped by the primal force of fire and the enduring
+            power of faith, where
+            every horizon murmurs myth and every stone breathes history. From the sublime drama of volcanic peaks to the
+            intricate grace of
+            timeless architecture, this is more than a journey—it is a reverent invitation to explore, to remember, and
+            to stand in wonder.
+            Here, the past and present converge in a tapestry of breathtaking beauty.</p>
+        <!-- <p align="center"><a href="https://x.com/nodws" class="btn twtr" target="_b">Follow me on Xitter</a> -->
+        </p>
+    </section>
 
     <script>
         // Navbar background change on scroll
@@ -133,6 +142,7 @@
             lastScrollTop = st <= 0 ? 0 : st;
         });
     </script>
+
 </body>
 
 </html>
