--- a/index.html
+++ b/index.html
@@ -44,35 +44,6 @@
         window.console = window.console || function (t) { };
     </script>
 
-    <!-- <script>
-        //# sourceURL=pen.js
-
-        window.addEventListener('DOMContentLoaded', () => {
-            let scrollPos = 0;
-            const mainNav = document.getElementById('mainNav');
-            const headerHeight = mainNav.clientHeight;
-            window.addEventListener('scroll', function () {
-                const currentTop = document.body.getBoundingClientRect().top * -1;
-                if (currentTop < scrollPos) {
-                    // Scrolling Up
-                    if (currentTop > 0 && mainNav.classList.contains('is-fixed')) {
-                        mainNav.classList.add('is-visible');
-                    } else {
-                        console.log(123);
-                        mainNav.classList.remove('is-visible', 'is-fixed');
-                    }
-                } else {
-                    // Scrolling Down
-                    mainNav.classList.remove(['is-visible']);
-                    if (currentTop > headerHeight && !mainNav.classList.contains('is-fixed')) {
-                        mainNav.classList.add('is-fixed');
-                    }
-                }
-                scrollPos = currentTop;
-            });
-        })
-    </script> -->
-
 </head>
 
 <body translate="no">
@@ -93,7 +64,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="blog.html">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                 </ul>
             </div>
