--- a/index.html
+++ b/index.html
@@ -83,20 +83,64 @@
                     Sean Margarata.</a>
             </div>
         </div>
+
+        <section class="content">
+            <p>Embark on a digital odyssey through awe-inspiring landscapes and echoes of ancient lore—a realm where
+                nature’s raw majesty and
+                the legacy of civilizations entwine. Traverse a land shaped by the primal force of fire and the enduring
+                power of faith, where
+                every horizon murmurs myth and every stone breathes history. From the sublime drama of volcanic peaks to
+                the
+                intricate grace of
+                timeless architecture, this is more than a journey—it is a reverent invitation to explore, to remember,
+                and
+                to stand in wonder.
+                Here, the past and present converge in a tapestry of breathtaking beauty.</p>
+            <!-- <p align="center"><a href="https://x.com/nodws" class="btn twtr" target="_b">Follow me on Xitter</a> -->
+            </p>
+        </section>
     </div>
-    <section class="content">
-        <p>Embark on a digital odyssey through awe-inspiring landscapes and echoes of ancient lore—a realm where
-            nature’s raw majesty and
-            the legacy of civilizations entwine. Traverse a land shaped by the primal force of fire and the enduring
-            power of faith, where
-            every horizon murmurs myth and every stone breathes history. From the sublime drama of volcanic peaks to the
-            intricate grace of
-            timeless architecture, this is more than a journey—it is a reverent invitation to explore, to remember, and
-            to stand in wonder.
-            Here, the past and present converge in a tapestry of breathtaking beauty.</p>
-        <!-- <p align="center"><a href="https://x.com/nodws" class="btn twtr" target="_b">Follow me on Xitter</a> -->
-        </p>
-    </section>
+    <main class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <div class="blog-container">
+                        <!-- Blog Post 1 -->
+                        <div class="blog-post">
+                            <div class="blog-thumbnail">
+                                <img src="https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+                                    alt="Luggage">
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">May 23, 2025</div>
+                                <h3 class="blog-title">
+                                    <a href="#">Sean Margarata Masarap daw?</a>
+                                </h3>
+                                <p class="blog-description">Basahin ang opinion ni Sean HAHAHAhA</p>
+                            </div>
+                        </div>
+
+                        <!-- Blog Post 2 -->
+                        <div class="blog-post">
+                            <div class="blog-thumbnail">
+                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+                                    alt="Travel">
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">May 23, 2025</div>
+                                <h3 class="blog-title">
+                                    <a href="#">Ampogi ni Eury</a>
+                                </h3>
+                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
 
     <script>
         // Navbar background change on scroll
