--- a/blog.html
+++ b/blog.html
@@ -83,50 +83,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="blog-container">
-                        <!-- Blog Post 1 -->
-                        <div class="blog-post">
-                            <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Luggage">
-                            </div>
-                            <div class="blog-info">
-                                <div class="blog-meta">49 mins ago</div>
-                                <h3 class="blog-title">
-                                    <a href="#">This Cult-Fave Luggage Brand Just Launched At Amazon</a>
-                                </h3>
-                                <p class="blog-description">Right In Time For Travel Season</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 2 -->
-                        <div class="blog-post">
-                            <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
-                            </div>
-                            <div class="blog-info">
-                                <div class="blog-meta">2 hours ago</div>
-                                <h3 class="blog-title">
-                                    <a href="#">Top 10 Travel Destinations for Summer 2023</a>
-                                </h3>
-                                <p class="blog-description">Discover the most popular spots this season</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 3 -->
-                        <div class="blog-post">
-                            <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1518544866330-95a2bf92cae3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Packing">
-                            </div>
-                            <div class="blog-info">
-                                <div class="blog-meta">1 day ago</div>
-                                <h3 class="blog-title">
-                                    <a href="#">Packing Hacks for Stress-Free Travel</a>
-                                </h3>
-                                <p class="blog-description">Expert tips to maximize your luggage space</p>
-                            </div>
-                        </div>
+                        <h1>Chat ano ba ilalagay nalang dito?</h1>
                     </div>
                 </div>
             </div>
