--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
         href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg"
         color="#111">
 
-
-
-
-    <script
-        src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
-
-
-    <title>CSS Animated Header</title>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
 
     <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap"
@@ -38,7 +31,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="./static/css/global.css">
 
     <script>
         window.console = window.console || function (t) { };
@@ -71,10 +65,6 @@
         </div>
     </nav>
     <div class="header">
-        <!-- <div class="sides">
-            <a href="#" class="logo">BLOG</a>
-        </div> -->
-        <!-- <div class="sides"> <a href="#" class="menu" id="openMenu"> </a></div> -->
         <div class="info">
             <h4>Readings in Philippine History</h4>
             <h1 class="title-home">5 Wonders of Daraga</h1>
@@ -96,7 +86,6 @@
                 and
                 to stand in wonder.
                 Here, the past and present converge in a tapestry of breathtaking beauty.</p>
-            <!-- <p align="center"><a href="https://x.com/nodws" class="btn twtr" target="_b">Follow me on Xitter</a> -->
             </p>
         </section>
     </div>
@@ -114,13 +103,55 @@
                             <div class="blog-info">
                                 <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Sean Margarata Masarap daw?</a>
+                                    <a href="./contents/mayon.html">Sean Margarata Masarap daw?</a>
                                 </h3>
                                 <p class="blog-description">Basahin ang opinion ni Sean HAHAHAhA</p>
                             </div>
                         </div>
 
                         <!-- Blog Post 2 -->
+                        <div class="blog-post">
+                            <div class="blog-thumbnail">
+                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+                                    alt="Travel">
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">May 23, 2025</div>
+                                <h3 class="blog-title">
+                                    <a href="#">Ampogi ni Eury</a>
+                                </h3>
+                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                            </div>
+                        </div>
+
+                        <div class="blog-post">
+                            <div class="blog-thumbnail">
+                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+                                    alt="Travel">
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">May 23, 2025</div>
+                                <h3 class="blog-title">
+                                    <a href="#">Ampogi ni Eury</a>
+                                </h3>
+                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                            </div>
+                        </div>
+
+                        <div class="blog-post">
+                            <div class="blog-thumbnail">
+                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+                                    alt="Travel">
+                            </div>
+                            <div class="blog-info">
+                                <div class="blog-meta">May 23, 2025</div>
+                                <h3 class="blog-title">
+                                    <a href="#">Ampogi ni Eury</a>
+                                </h3>
+                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                            </div>
+                        </div>
+
                         <div class="blog-post">
                             <div class="blog-thumbnail">
                                 <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
