--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/styles/blog.css">
-    <link rel="stylesheet" href="../static/styles/global.css">
+    <link rel="stylesheet" href="./static/styles/blog.css">
+    <link rel="stylesheet" href="./static/styles/global.css">
 
     <script>
         window.console = window.console || function (t) { };
