--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-title" content="CodePen">
 
     <link rel="icon" type="image/x-icon"
-        href="static\images\favicon.png">
+        href="static/images/favicon.png">
 
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
 
