--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 
     <meta name="apple-mobile-web-app-title" content="CodePen">
 
-    <link rel="icon" type="image/x-icon"
+    <link rel="icon" type="image/png"
         href="static/images/favicon.png">
 
     <script
