--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Style Sheets -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap">
     <link rel="stylesheet" href="./static/styles/index.css">
     <link rel="stylesheet" href="./static/styles/global.css">
-    
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
+
+    <script
+        src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
     <script> window.console = window.console || function (t) { }; </script>
 
     <title>Home</title>
@@ -64,7 +66,7 @@
 
         <section class="content">
             <p>Embark on a digital odyssey through awe-inspiring landscapes and echoes of ancient lore—a realm where
-                nature’s raw majesty and
+                nature's raw majesty and
                 the legacy of civilizations entwine. Traverse a land shaped by the primal force of fire and the enduring
                 power of faith, where
                 every horizon murmurs myth and every stone breathes history. From the sublime drama of volcanic peaks to
@@ -74,7 +76,6 @@
                 and
                 to stand in wonder.
                 Here, the past and present converge in a tapestry of breathtaking beauty.</p>
-            </p>
         </section>
     </div>
     <main class="mb-4">
