Navbar.css nilipat ey

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap">
     <link rel="stylesheet" href="./static/styles/index.css">
+    <link rel="stylesheet" href="static/styles/nav-bar.css">
     <link rel="stylesheet" href="./static/styles/global.css">
 
     <script
@@ -159,8 +160,6 @@
             </div>
         </div>
     </main>
-
-
 
     <script>
         // Navbar background change on scroll
