--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap">
     <link rel="stylesheet" href="./static/styles/blog.css">
+    <link rel="stylesheet" href="static/styles/nav-bar.css">
     <link rel="stylesheet" href="./static/styles/global.css">
     
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
