updated index.html and css

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                                     alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
                                     <a href="./contents/mayon.html">Sean Margarata Masarap daw?</a>
                                 </h3>
+                                <div class="blog-meta">Daraga, Albay</div>
                                 <p class="blog-description">Basahin ang opinion ni Sean HAHAHAhA</p>
                             </div>
                         </div>
