--- a/contents/mayon.html
+++ b/contents/mayon.html
@@ -1,17 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
+    <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/global.css">
-    <link rel="stylesheet" href="../../static/css/nav-bar.css">
+    <link rel="stylesheet" href="../static/styles/nav-bar.css">
+
+    <style>
+        /* Ensure the body doesn't have unnecessary height */
+        html, body {
+            margin: 0;
+            height: auto;
+            /* Changed from 120% */
+            min-height: 100vh;
+            font-family: "Montserrat", sans-serif;
+        }
+
+        a {
+            text-decoration: none
+        }
+
+        .navbar-hide {
+            transform: translateY(-100%);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .header:after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: -1;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.12) 40%, rgba(27, 32, 48, 1) 100%);
+        }
+
+        .header:before {
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            -webkit-backface-visibility: hidden;
+            -webkit-transform: translateZ(0);
+            backface-visibility: hidden;
+            background: #1B2030 url("../static/images/mayon.jpg") 0% 0 no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            animation: pan-image 120s linear infinite alternate;
+            z-index: -2;
+        }
+
+        @keyframes pan-image {
+            0% {
+                transform: scale(1) translateY(0);
+                background-position: 0% 0%;
+            }
+
+            100% {
+                transform: scale(1) translateY(0);
+                background-position: 0% 100%;
+            }
+        }
+
+        .header a {
+            color: #eee
+        }
+
+        .header {
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-start;
+            align-content: flex-start;
+            height: 60vw;
+            min-height: 300px;
+            max-height: 750px;
+            min-width: 300px;
+            color: #eee;
+            border-radius: 0 0 20px 20px;
+            text-shadow: 0 2px 6px #000a
+        }
+
+        .title-home {
+            font-family: "Noto Sans JP", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+            margin: 0.5em 0;
+            line-height: 1.2;
+            font-size: clamp(2.5rem, 8vw, 6rem);
+        }
+
+        .info {
+            flex: 0 0 auto;
+            width: 50%
+        }
+
+        .info {
+            width: 100%;
+            padding: 15% 10% 0 10%;
+            text-align: center;
+        }
+
+
+        .info h4 {
+            font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+        }
+
+        @media (min-width: 768px) {
+            .info {
+                padding: 15% 10% 0 10%;
+            }
+        }
+
+        @keyframes grow {
+            0% {
+                transform: scale(1) translateY(0px)
+            }
+
+            50% {
+                transform: scale(1.2) translateY(-400px)
+            }
+        }
+    </style>
 </head>
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
@@ -36,5 +160,16 @@
             </div>
         </div>
     </nav>
+    <div class="header">
+        <div class="info">
+            <h1 class="title-home">Mt. Mayon</h1>
+        </div>
+    </div>
+
+    <main>
+        
+    </main>
+    <script src="../js/global.js"></script>
 </body>
+
 </html>
