--- a/index.html
+++ b/index.html
@@ -100,62 +100,66 @@
                             </div>
                         </div>
 
-                        <!-- Blog Post 2 -->
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
