--- a/contents/daraga_church.html
+++ b/contents/daraga_church.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
+    <link rel="canonical" href="https://codepen.io/nodws/pen/aWgMMQ">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/global.css">
-    <link rel="stylesheet" href="../../static/css/nav-bar.css">
+    <link rel="stylesheet" href="../static/styles/nav-bar.css">
+    <link rel="stylesheet" href="contents.css">
+
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+        rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
@@ -36,5 +45,181 @@
             </div>
         </div>
     </nav>
+    <div class="header">
+        <div class="info">
+            <h1 class="title-home">Mt. Mayon</h1>
+        </div>
+    </div>
+    <article class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <p>Mayon Volcano, located in the province of Albay in the Bicol Region of the Philippines, is
+                        renowned for its near-perfect symmetrical cone shape. Standing at 2,463 meters (8,081 feet), it
+                        is one of the most active volcanoes in the country and a prominent symbol of natural beauty and
+                        danger. Its frequent eruptions have shaped both the landscape and the lives of the people living
+                        around it, making it a vital part of Bicolano culture and identity.</p>
+                    <p>The volcano is part of the Pacific Ring of Fire, a region prone to earthquakes and volcanic
+                        activity. Despite its destructive potential, Mayon’s breathtaking beauty attracts tourists,
+                        photographers, and scientists from around the world. Its lush green slopes contrast with the
+                        gray lava flows from past eruptions, creating a dramatic and picturesque landscape.</p>
+                    <p>Mayon is not just a geological wonder but also a cultural icon, deeply embedded in local legends,
+                        art, and traditions. From ancient folklore to modern-day festivals, the volcano remains a source
+                        of pride and reverence for the Bicolano people. Its presence influences daily life, agriculture,
+                        and even spirituality in the region.</p>
+                    <h2 class="section-heading">History</h2>
+                    <p>1616 Eruption – Mayon’s first recorded eruption occurred in 1616, spewing ash and lava. Spanish
+                        colonizers documented the event, marking the beginning of its historical volcanic activity. The
+                        eruption caused significant damage to nearby settlements. It set the precedent for future
+                        evacuations and disaster responses.</p>
+                    <p>1814 Eruption – One of Mayon’s deadliest eruptions buried the town of Cagsawa, killing over 1,200
+                        people. Only the bell tower of Cagsawa Church remains visible today as a grim reminder. The
+                        eruption also destroyed several other villages. Ashfall reached as far as present-day Legazpi
+                        City.</p>
+                    <p>1897 Eruption – This violent eruption lasted for seven days, with lava flows reaching the lower
+                        slopes. It caused massive evacuations and economic disruption. The event was one of the most
+                        visually documented eruptions of the 19th century. It reinforced Mayon’s reputation as both
+                        beautiful and deadly.</p>
+                    <p>1984 Eruption – A major eruption prompted the evacuation of over 73,000 people. Lava fountains
+                        and pyroclastic flows devastated nearby farmlands. The Philippine government and international
+                        agencies closely monitored the event. Despite the destruction, no fatalities were recorded due
+                        to effective disaster response.</p>
+                    <p>2018 Eruption – A phreatic (steam-driven) eruption led to ash plumes rising kilometers into the
+                        sky. Thousands were evacuated as lava flows and pyroclastic density currents threatened
+                        communities. The eruption lasted several months, disrupting flights and agriculture. It
+                        highlighted the need for constant volcanic monitoring and preparedness.</p>
+                    <h2 class="section-heading">Facts</h2>
+                    <p>Mayon’s near-perfect conical shape is the result of its stratovolcano structure, built up by
+                        layers of hardened lava, ash, and volcanic rocks from past eruptions. Unlike other volcanoes
+                        that may have irregular shapes due to explosive eruptions or landslides, Mayon’s eruptions
+                        typically produce viscous lava that flows symmetrically down its slopes. This consistent
+                        eruptive behavior over centuries has maintained its iconic form.</p>
+                    <p>Scientists study Mayon’s eruptions to understand volcanic behavior better. Its frequent activity
+                        provides valuable data on magma movement, gas emissions, and pyroclastic flows. Despite its
+                        beauty, the volcano remains highly dangerous, with lahars (mudflows) and pyroclastic surges
+                        posing constant threats. Advanced monitoring systems, including seismographs and satellite
+                        imaging, help predict eruptions and save lives.</p>
+                    <a href="#!"><img class="img-fluid" src="../static/images/Mayon2.jpg" alt="..."></a>
+                    <span class="caption text-muted">Mayon Volcano along with the Daraga Church</span>
+                    <h2 class="section-heading">Folklore & Local Legnecs</h2>
+                    <p>The Legend of Daragang Magayon – The most famous legend tells of the beautiful princess Magayon
+                        (meaning "beautiful" in Bicolano) who fell in love with a warrior named Panganoron. Their tragic
+                        love story ended in death, and it is said that Mayon grew from Magayon’s grave, with Panganoron
+                        as the clouds that often shroud the peak.</p>
+                    <p>The Fire of Gugurang – Ancient Bicolanos believed that the volcano was the home of Gugurang,
+                        their supreme god who controlled fire and punished the wicked. Eruptions were seen as his wrath
+                        against immoral acts.</p>
+                    <p> The Battle of Gods – Another myth tells of a conflict between Gugurang and his rival, Asuang
+                        (the god of evil). Asuang’s attempts to steal Gugurang’s fire caused eruptions and earthquakes.
+                    </p>
+                    <p>The Guardian Spirits – Locals believe that ancestral spirits dwell within Mayon, protecting the
+                        land. Offerings are sometimes made to appease them and prevent eruptions.
+                    </p>
+                    <p>The White Rock (Lignon Hill) – A legend says that a giant white rock near Mayon was a piece of
+                        the volcano thrown during a battle between gods, now serving as a natural landmark.
+                    </p>
+                    <h2 class="section-heading">Lancmarks (Tourist Spots)</h2>
+                    <p> Cagsawa Ruins – The remains of an 18th-century church buried by the 1814 eruption, now a famous
+                        tourist spot and photography site.
+                    </p>
+                    <p>Lignon Hill – A viewpoint offering panoramic views of Mayon and Legazpi City, with a zipline
+                        adventure for thrill-seekers.
+                    </p>
+                    <p>Sumlang Lake – A serene crater lake with bamboo raft rides, perfect for Mayon’s reflection shots.
+                    </p>
+                    <p>Mayon Skyline Viewdeck – Located in Tabaco City, this spot provides one of the closest views of
+                        the volcano’s summit.</p>
+                    <p>Quitinday Green Hills Formation – Rolling hills resembling Bohol’s Chocolate Hills, with a
+                        stunning Mayon backdrop.</p>
+                    <blockquote class="blockquote">Mayon Volcano is more than just a natural wonder—it is the heart of
+                        Bicolano culture, history, and identity. Its eruptions have shaped the land and the resilience
+                        of the people, while its beauty inspires art, literature, and pride. The volcano’s presence is
+                        intertwined with local spirituality, as seen in myths and rituals that honor its power.
+                    </blockquote>
+                    <blockquote class="blockquote">For Bicolanos, Mayon symbolizes both danger and majesty, reminding
+                        them of nature’s unpredictability and their ability to adapt. Festivals like the Magayon
+                        Festival celebrate this connection, blending tradition with modern appreciation. Whether as a
+                        scientific marvel, a tourist attraction, or a cultural icon, Mayon remains an enduring symbol of
+                        the Bicol Region’s strength and beauty.
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <footer class="border-top">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item">
+                            <a href="#!">
+                                <span class="fa-stack fa-lg">
+                                    <svg class="svg-inline--fa fa-circle fa-stack-2x" aria-hidden="true"
+                                        focusable="false" data-prefix="fas" data-icon="circle" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512z">
+                                        </path>
+                                    </svg><!-- <i class="fas fa-circle fa-stack-2x"></i> Font Awesome fontawesome.com -->
+                                    <svg class="svg-inline--fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"
+                                        focusable="false" data-prefix="fab" data-icon="twitter" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z">
+                                        </path>
+                                    </svg><!-- <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> Font Awesome fontawesome.com -->
+                                </span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#!">
+                                <span class="fa-stack fa-lg">
+                                    <svg class="svg-inline--fa fa-circle fa-stack-2x" aria-hidden="true"
+                                        focusable="false" data-prefix="fas" data-icon="circle" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512z">
+                                        </path>
+                                    </svg><!-- <i class="fas fa-circle fa-stack-2x"></i> Font Awesome fontawesome.com -->
+                                    <svg class="svg-inline--fa fa-facebook-f fa-stack-1x fa-inverse" aria-hidden="true"
+                                        focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
+                                        </path>
+                                    </svg><!-- <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> Font Awesome fontawesome.com -->
+                                </span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#!">
+                                <span class="fa-stack fa-lg">
+                                    <svg class="svg-inline--fa fa-circle fa-stack-2x" aria-hidden="true"
+                                        focusable="false" data-prefix="fas" data-icon="circle" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512z">
+                                        </path>
+                                    </svg><!-- <i class="fas fa-circle fa-stack-2x"></i> Font Awesome fontawesome.com -->
+                                    <svg class="svg-inline--fa fa-github fa-stack-1x fa-inverse" aria-hidden="true"
+                                        focusable="false" data-prefix="fab" data-icon="github" role="img"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg="">
+                                        <path fill="currentColor"
+                                            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                                        </path>
+                                    </svg><!-- <i class="fab fa-github fa-stack-1x fa-inverse"></i> Font Awesome fontawesome.com -->
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="small text-center text-muted fst-italic">Copyright © Your Website 2023</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/global.js"></script>
 </body>
+
 </html>
