--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
                                     <a href="./contents/mayon.html">Mount Mayon</a>
                                 </h3>
                                 <div class="blog-meta">Daraga, Albay</div>
-                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
-                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
+                                <p class="blog-description">Mayon Volcano, located in the province of Albay in the Bicol Region
+                                     of the Philippines, is renowned for its near-perfect symmetrical cone shape.
+                                     Standing at 2,463 meters (8,081 feet), it is one of the most active volcanoes in the country and a prominent symbol of natural beauty and danger. 
+                                     Its frequent eruptions have shaped both the landscape and the lives of the people living around it, 
+                                    making it a vital part of Bicolano culture and identity.</p>
                             </div>
                         </div>
 
@@ -109,9 +112,11 @@
                                 <h3 class="blog-title">
                                     <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <div class="blog-meta">Daraga, Albay</div>
-                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
-                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
+                                <div class="blog-meta">Sta. Maria Street, Daraga, Albay</div>
+                                <p class="blog-description">One of the few of Albay’s heritage churches that withstood the effects of Mayon volcano’s eruptions is the 
+                                    Daraga Church or also known as Nuestra Señora de la Porteria Parish Church. Perched on a hill with a 
+                                    commanding view of the majestic Mayon Volcano, Daraga Church  stands as a lasting testament of faith, 
+                                    artistry, and resilience of Albayanos.</p>
                             </div>
                         </div>
 
