--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="blog-post">
                             <div class="blog-thumbnail">
                                 <img src="./static/images/mayon.jpg"
-                                    alt="Luggage">
+                                    alt="Mayon">
                             </div>
                             <div class="blog-info">
                                 <h3 class="blog-title">
@@ -105,8 +105,8 @@
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="./static/images/mayon.jpg"
-                                    alt="Luggage">
+                                <a href="./contents/daraga_church.html"><img src="./static/images/daraga-church-poster.png"
+                                    alt="Daraga Church"></a>
                             </div>
                             <div class="blog-info">
                                 <h3 class="blog-title">
