cagsawa-ruins renamed

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="./static/images/mayon.jpg"
-                                    alt="Luggage">
+                                <a href="./contents/cagsawa-ruins.html"><img src="./static/images/cagsawaruins-poster.jpg"
+                                    alt="Cagsawa Church"></a>
                             </div>
                             <div class="blog-info">
                                 <h3 class="blog-title">
