Polished Daraga Church

--- a/contents/mayon.html
+++ b/contents/mayon.html
@@ -99,7 +99,7 @@
                         beauty, the volcano remains highly dangerous, with lahars (mudflows) and pyroclastic surges
                         posing constant threats. Advanced monitoring systems, including seismographs and satellite
                         imaging, help predict eruptions and save lives.</p>
-                    <a href="#!"><img class="img-fluid" src="../static/images/Mayon2.jpg" alt="..."></a>
+                    <img class="img-fluid" src="../static/images/Mayon2.jpg" alt="Mayon volcano along daraga church">
                     <span class="caption text-muted">Mayon Volcano along with the Daraga Church</span>
                     <h2 class="section-heading">Folklore & Local Legends</h2>
                     <p>The Legend of Daragang Magayon – The most famous legend tells of the beautiful princess Magayon
