--- a/contents/daraga_church.html
+++ b/contents/daraga_church.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="logo navbar-brand" href="about.html">About</a>
+            <a class="logo navbar-brand" href="daraga_church.html">Daraga Church</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <svg class="svg-inline--fa fa-bars" aria-hidden="true" focusable="false" data-prefix="fas"
@@ -97,6 +97,8 @@
                         Historical Institute unveiled its official historical marker.
                     </p>
                     <h2 class="section-heading">Facts</h2>
+                    <img class="img-fluid" src="../static/images/daraga-church-1950.webp" alt="Daraga Church">
+                    <span class="caption text-muted">Daraga Church in 1950</span>
                     <p class="indented">Daraga Church is an exquisite example of Churrigueresque architecture, a highly decorative Spanish Baroque style, best seen 
                         in its ornate façade. Built using locally sourced volcanic rock, the structure blends natural materials with intricate artistry, 
                         symbolizing the resilience and faith of the Albayanos who constructed it. The church’s current white exterior is a result of a 
@@ -125,6 +127,8 @@
                         </li>
                     </ul>
                     <h2 class="section-heading">The Belfry: Echoes of the Apostles</h2>
+                    <img class="img-fluid" src="../static/images/daraga-church-belfry.jpg" alt="Daraga Church Belfry">
+                    <span class="caption text-muted">Daraga Church Belfry</span>
                     <p class="indented">To the left of the church stands its octagonal bell tower, rising in four graceful tiers and culminating in a dome and cross. The base of the belfry 
                         features reliefs of the Twelve Apostles, carved into six of its sides, an artistic representation of the Church’s foundation in apostolic tradition. Each level of the 
                         tower narrows upward, symbolizing the church’s spiritual ascent toward heaven, with the sound of its bell once guiding the faithful to prayer and safety.
@@ -143,6 +147,8 @@
                         the hill in gratitude to the patroness of Daraga.
                     </p>
                     <h2 class="section-heading">Daraga Church vs. Cagsawa Ruins: Twin Survivors</h2>
+                    <img class="img-fluid" src="../static/images/daraga-vs-cagasawa-church.jpg" alt="Daraga Church and Cagsawa Church">
+                    <span class="caption text-muted">Daraga Church and Cagsawa Church</span>
                     <p class="indented">Often compared and forever linked by history, Daraga Church and the Cagsawa Ruins stand as powerful symbols of resilience in Albay. While Cagsawa Church was famously 
                         destroyed by the devastating eruption of Mayon Volcano in 1814, its surviving belfry has become a haunting reminder of nature’s power. In contrast, Daraga Church, 
                         perched strategically on a hill in nearby Barangay Santa Maria, was spared from the lava flows, becoming a refuge for Cagsawa’s displaced parishioners.
